# tuberd

./: .gitignore  CHANGES  CMakeLists.txt  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: client.yml  cmake.yml  cross-tests.yml  package.yml
example/: README.rst  example_client.py  example_server.py
include/: tuber_support.hpp
py/: preamble.py
py/tuber/: __init__.py  client.py  codecs.py  server.py  tuber.py  tworoutine.py
src/: server.cpp
tests/: conftest.py  pytest.ini  test.py  test_module.cpp
tuber/: __init__.py  client.py  codecs.py  schema.py  server.py
wheels/: install_deps.sh
wheels/client/: tuber
