[build-system]
requires = [
    "cmake>=3.12",
    "pybind11",
    "setuptools>=61",
    "setuptools_scm[toml]>=6.3",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name='tuber'
description='Serve Python (or C++) objects across a LAN using something like JSON-RPC'
authors=[
	{name="Graeme Smecher", email="gsmecher@threespeedlogic.com"},
]
urls={source="https://github.com/gsmecher/tuber"}
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
license = {file="LICENSE"}
dynamic = ["version"]

[tool.setuptools_scm]
#version_file = "py/tuber/_version.py"  # version 8.0.0 and newer
write_to = "tuber/_version.py"  # version 7.1.0 and older
version_scheme = "no-guess-dev"

[tool.black]
line-length = 120
